--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.10.4",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "next": "12.3.1",
+    "next-themes": "^0.2.1",
+    "postcss": "^8.4.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.11.2",
