--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.0",
+    "sharp": "^0.32.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
